--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "graphql": "^14.7.0",
     "graphql-depth-limit": "^1.1.0",
     "graphql-import": "^0.7.1",
     "graphql-import-node": "^0.0.1",
     "http": "^0.0.0",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
-    "xss-clean": "^0.1.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "@types/compression": "^0.0.36",
