--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -2,7 +2,7 @@ FROM node:16-alpine as node
 
 FROM docker 
 
-VOLUME /var/run/docker.sock /var/run/docker.sock
+# VOLUME /var/run/docker.sock /var/run/docker.sock
 
 COPY --from=node /usr/lib /usr/lib
 COPY --from=node /usr/local/share /usr/local/share
