--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -1,20 +1,55 @@
-FROM node:16-alpine as node
+# FROM node:16-alpine as node
 
-FROM docker 
+# FROM docker 
 
-# VOLUME /var/run/docker.sock /var/run/docker.sock
+# # VOLUME /var/run/docker.sock /var/run/docker.sock
 
-COPY --from=node /usr/lib /usr/lib
-COPY --from=node /usr/local/share /usr/local/share
-COPY --from=node /usr/local/lib /usr/local/lib
-COPY --from=node /usr/local/include /usr/local/include
-COPY --from=node /usr/local/bin /usr/local/bin
+# COPY --from=node /usr/lib /usr/lib
+# COPY --from=node /usr/local/share /usr/local/share
+# COPY --from=node /usr/local/lib /usr/local/lib
+# COPY --from=node /usr/local/include /usr/local/include
+# COPY --from=node /usr/local/bin /usr/local/bin
 
-RUN apk add --no-cache aws-cli
+# RUN apk add --no-cache aws-cli
 
+# # Setup users and groups
+# RUN groupadd -g ${JENKINSGID} jenkins
+# RUN groupmod -g ${DOCKERGID} docker
+# RUN useradd -c "Jenkins user" -g ${JENKINSGID} -G ${DOCKERGID} -M -N -u ${JENKINSUID} jenkins
+
+# EXPOSE 8090
+
+
+# Dockerfile.jenkinsAgent
+FROM debian:stretch-backports
+ARG JENKINSUID
+ARG JENKINSGID
+ARG DOCKERGID
+...
+# Install Docker in the image, which adds a docker group
+RUN apt-get -y update && \
+ apt-get -y install \
+   apt-transport-https \
+   ca-certificates \
+   curl \
+   gnupg \
+   lsb-release \
+   software-properties-common
+
+RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
+RUN add-apt-repository \
+   "deb [arch=amd64] https://download.docker.com/linux/debian \
+   $(lsb_release -cs) \
+   stable"
+
+RUN apt-get -y update && \
+ apt-get -y install \
+   docker-ce \
+   docker-ce-cli \
+   containerd.io
+
+...
 # Setup users and groups
 RUN groupadd -g ${JENKINSGID} jenkins
 RUN groupmod -g ${DOCKERGID} docker
 RUN useradd -c "Jenkins user" -g ${JENKINSGID} -G ${DOCKERGID} -M -N -u ${JENKINSUID} jenkins
-
-EXPOSE 8090
