--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -26,27 +26,41 @@ ARG JENKINSUID
 ARG JENKINSGID
 ARG DOCKERGID
 # Install Docker in the image, which adds a docker group
+# RUN apt-get -y update && \
+#  apt-get -y install \
+#    apt-transport-https \
+#    ca-certificates \
+#    curl \
+#    gnupg \
+#    lsb-release \
+#    software-properties-common
+
+# RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
+# RUN add-apt-repository \
+#    "deb [arch=amd64] https://download.docker.com/linux/debian \
+#    $(lsb_release -cs) \
+#    stable"
+
+# RUN apt-get -y update && \
+#  apt-get -y install \
+#    docker-ce \
+#    docker-ce-cli \
+#    containerd.io
+
 RUN apt-get -y update && \
- apt-get -y install \
-   apt-transport-https \
-   ca-certificates \
-   curl \
-   gnupg \
-   lsb-release \
-   software-properties-common
+    apt-get install \
+    ca-certificates \
+    curl \
+    gnupg \
+    lsb-release
 
-RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
-RUN add-apt-repository \
-   "deb [arch=amd64] https://download.docker.com/linux/debian \
-   $(lsb_release -cs) \
-   stable"
+RUN mkdir -p /etc/apt/keyrings && curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
+    && echo \
+  "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
+  $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 
 RUN apt-get -y update && \
- apt-get -y install \
-   docker-ce \
-   docker-ce-cli \
-   containerd.io
-
+    apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
 # Setup users and groups
 RUN groupadd -g ${JENKINSGID} jenkins
 RUN groupmod -g ${DOCKERGID} docker
