--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -21,7 +21,7 @@
 
 
 # Dockerfile.jenkinsAgent
-FROM debian:stretch-backports
+FROM debian:bookworm-backports
 ARG JENKINSUID
 ARG JENKINSGID
 ARG DOCKERGID
@@ -60,7 +60,7 @@ RUN mkdir -p /etc/apt/keyrings && curl -fsSL https://download.docker.com/linux/d
   $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
 
 RUN apt-get -y update && \
-    apt-get -y install docker-ce
+    apt-get -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
 # Setup users and groups
 RUN groupadd -g ${JENKINSGID} jenkins
 RUN groupmod -g ${DOCKERGID} docker
