--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -25,27 +25,6 @@ FROM debian:11
 ARG JENKINSUID
 ARG JENKINSGID
 ARG DOCKERGID
-# Install Docker in the image, which adds a docker group
-# RUN apt-get -y update && \
-#  apt-get -y install \
-#    apt-transport-https \
-#    ca-certificates \
-#    curl \
-#    gnupg \
-#    lsb-release \
-#    software-properties-common
-
-# RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
-# RUN add-apt-repository \
-#    "deb [arch=amd64] https://download.docker.com/linux/debian \
-#    $(lsb_release -cs) \
-#    stable"
-
-# RUN apt-get -y update && \
-#  apt-get -y install \
-#    docker-ce \
-#    docker-ce-cli \
-#    containerd.io
 
 RUN apt-get -y update && \
     apt-get -y install \
@@ -61,6 +40,11 @@ RUN mkdir -p /etc/apt/keyrings && curl -fsSL https://download.docker.com/linux/d
 
 RUN apt-get -y update && \
     apt-get -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+
+RUN apt update && \
+    curl -sL https://deb.nodesource.com/setup_16.x | sudo bash - && \
+    apt -y install nodejs
+
 # Setup users and groups
 RUN groupadd -g ${JENKINSGID} jenkins
 RUN groupmod -g ${DOCKERGID} docker
