--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -42,8 +42,12 @@ RUN apt-get -y update && \
     apt-get -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
 
 RUN apt update && \
-    curl -sL https://deb.nodesource.com/setup_16.x | sudo bash - && \
+    curl -sL https://deb.nodesource.com/setup_16.x | bash - && \
     apt -y install nodejs
+
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
+    unzip awscliv2.zip && \
+    ./aws/install
 
 # Setup users and groups
 RUN groupadd -g ${JENKINSGID} jenkins
