--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -45,7 +45,7 @@ RUN apt update && \
     curl -sL https://deb.nodesource.com/setup_16.x | bash - && \
     apt -y install nodejs
 
-RUN apt install zip
+RUN apt-get -y install zip
 
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
