--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -47,6 +47,8 @@ RUN apt update && \
 
 RUN apt-get -y install zip
 
+RUN apt-get -y install gnupg2 pass
+
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
     ./aws/install
