--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -47,7 +47,7 @@ RUN apt update && \
 
 RUN apt-get -y install zip
 
-RUN apt-get -y install gnupg2 pass
+RUN apt-get -y install gnupg2 pass golang-docker-credential-helpers 
 
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
