--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -41,21 +41,28 @@ RUN mkdir -p /etc/apt/keyrings && curl -fsSL https://download.docker.com/linux/d
 RUN apt-get -y update && \
     apt-get -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
 
-# Setup users and groups
-RUN groupadd -g ${JENKINSGID} jenkins
-RUN groupmod -g ${DOCKERGID} docker
-RUN useradd -c "Jenkins user" -g ${JENKINSGID} -G ${DOCKERGID} -M -N -u ${JENKINSUID} jenkins
-
 RUN apt update && \
     curl -sL https://deb.nodesource.com/setup_16.x | bash - && \
     apt -y install nodejs
 
 RUN apt-get -y install zip
 
-RUN apt-get -y install gnupg2 pass golang-docker-credential-helpers 
+# RUN apt-get -y install gnupg2 pass golang-docker-credential-helpers 
 
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
     ./aws/install
 
-RUN service docker stop && rm ~/.docker/config.json && service docker start
+RUN apt-get istall pass && \ 
+    wget https://github.com/docker/docker-credential-helpers/releases/download/v0.6.0/docker-credential-pass-v0.6.0-amd64.tar.gz && \ 
+    tar -xf docker-credential-pass-v0.6.0-amd64.tar.gz && \ 
+    chmod +x docker-credential-pass && \
+    mv docker-credential-pass /usr/local/bin/ && \
+    gpg2 --gen-key && \
+    pass init "jenkis" && \
+    sed -i '0,/{/s/{/{\n\t"credsStore": "pass",/' ~/.docker/config.json
+
+# Setup users and groups
+RUN groupadd -g ${JENKINSGID} jenkins
+RUN groupmod -g ${DOCKERGID} docker
+RUN useradd -c "Jenkins user" -g ${JENKINSGID} -G ${DOCKERGID} -M -N -u ${JENKINSUID} jenkins
