--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -45,7 +45,7 @@ RUN groupadd -g ${JENKINSGID} jenkins
 RUN groupmod -g ${DOCKERGID} docker
 RUN useradd -c "Jenkins user" -g ${JENKINSGID} -G ${DOCKERGID} -M -N -u ${JENKINSUID} jenkins
 
-RUN mkdir "/home/jenkins" && chown -R jenkins "/home/jenkins" 
+RUN mkdir -p "/home/jenkins" && chown -R jenkins "/home/jenkins" 
 
 RUN apt update && \
     curl -sL https://deb.nodesource.com/setup_16.x | bash - && \
