--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -31,7 +31,8 @@ RUN apt-get -y update && \
     ca-certificates \
     curl \
     gnupg \
-    lsb-release
+    lsb-release && \
+    apt-get -y install zip
 
 RUN mkdir -p /etc/apt/keyrings && curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
     && echo \
@@ -41,25 +42,16 @@ RUN mkdir -p /etc/apt/keyrings && curl -fsSL https://download.docker.com/linux/d
 RUN apt-get -y update && \
     apt-get -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
 
-RUN groupadd -g ${JENKINSGID} jenkins
-RUN groupmod -g ${DOCKERGID} docker
-RUN useradd -c "Jenkins user" -g ${JENKINSGID} -G ${DOCKERGID} -M -N -u ${JENKINSUID} jenkins
-
-RUN mkdir -p "/home/jenkins" && chown -R jenkins "/home/jenkins" 
-
 RUN apt update && \
     curl -sL https://deb.nodesource.com/setup_16.x | bash - && \
     apt -y install nodejs
-
-RUN apt-get -y install zip
-
-# RUN apt-get -y install gnupg2 pass golang-docker-credential-helpers 
 
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
     ./aws/install
 
+RUN groupadd -g ${JENKINSGID} jenkins
+RUN groupmod -g ${DOCKERGID} docker
+RUN useradd -c "Jenkins user" -g ${JENKINSGID} -G ${DOCKERGID} -M -N -u ${JENKINSUID} jenkins
 
-# RUN apt-get istall pass && \ 
-#     wget https://github.com/docker/docker-credential-helpers/releases/download/v0.6.0/docker-credential-pass-v0.6.0-amd64.tar.gz && \ 
-#     tar -xf docker-c
+RUN mkdir -p "/home/jenkins" && chown -R jenkins "/home/jenkins" 
