--- a/Dockerfile-Sortlog-Env
+++ b/Dockerfile-Sortlog-Env
@@ -21,32 +21,32 @@
 
 
 # Dockerfile.jenkinsAgent
-FROM debian:11
+FROM tremendousure/sortlog:latest
 ARG JENKINSUID
 ARG JENKINSGID
 ARG DOCKERGID
 
-RUN apt-get -y update && \
-    apt-get -y install \
-    ca-certificates \
-    curl \
-    gnupg \
-    lsb-release && \
-    apt-get -y install zip
+# RUN apt-get -y update && \
+#     apt-get -y install \
+#     ca-certificates \
+#     curl \
+#     gnupg \
+#     lsb-release && \
+#     apt-get -y install zip
 
-RUN mkdir -p /etc/apt/keyrings && curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
-    && echo \
-    "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
-    $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+# RUN mkdir -p /etc/apt/keyrings && curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
+#     && echo \
+#     "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
+#     $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
 
-RUN apt-get -y update && \
-    apt-get -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+# RUN apt-get -y update && \
+#     apt-get -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
 
-RUN apt update && \
-    curl -sL https://deb.nodesource.com/setup_16.x | bash - && \
-    apt -y install nodejs
+# RUN apt update && \
+#     curl -sL https://deb.nodesource.com/setup_16.x | bash - && \
+#     apt -y install nodejs
 
-RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
+# RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
     ./aws/install
 
